Improve the java bean RememberMeAuthenticationFilter  to reference the other bean TokenBasedRememberMeServices

--- a/docs/modules/ROOT/pages/servlet/authentication/rememberme.adoc
+++ b/docs/modules/ROOT/pages/servlet/authentication/rememberme.adoc
@@ -166,7 +166,7 @@ Java::
 @Bean
 RememberMeAuthenticationFilter rememberMeFilter() {
     RememberMeAuthenticationFilter rememberMeFilter = new RememberMeAuthenticationFilter();
-    rememberMeFilter.setRememberMeServices(rememberMeServices);
+    rememberMeFilter.setRememberMeServices(rememberMeServices());
     rememberMeFilter.setAuthenticationManager(theAuthenticationManager);
     return rememberMeFilter;
 }
