Fixing untitled page title in documentation

--- a/docs/modules/ROOT/pages/servlet/test/mockmvc/result-handlers.adoc
+++ b/docs/modules/ROOT/pages/servlet/test/mockmvc/result-handlers.adoc
@@ -1,4 +1,4 @@
-=== SecurityMockMvcResultHandlers
+= SecurityMockMvcResultHandlers
 
 Spring Security provides a few ``ResultHandler``s implementations.
 In order to use Spring Security's ``ResultHandler``s implementations ensure the following static import is used:
