Add Missing Return Statement in Snippet
Closes gh-13596
Closes gh-13595

--- a/docs/modules/ROOT/pages/servlet/authorization/architecture.adoc
+++ b/docs/modules/ROOT/pages/servlet/authorization/architecture.adoc
@@ -253,10 +253,11 @@ Java::
 ----
 @Bean
 static RoleHierarchy roleHierarchy() {
-    var hierarchy = new RoleHierarchyImpl();
+    RoleHierarchyImpl hierarchy = new RoleHierarchyImpl();
     hierarchy.setHierarchy("ROLE_ADMIN > ROLE_STAFF\n" +
             "ROLE_STAFF > ROLE_USER\n" +
             "ROLE_USER > ROLE_GUEST");
+    return hierarchy;
 }
 
 // and, if using method security also add
